compiler/testData/diagnostics/tests/nothingBound.fir.kt
// ISSUE: KT-70352

fun <T: <!FINAL_UPPER_BOUND!>Nothing<!>> f() {}
